doc: README.md update